--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,1 +1,21 @@
-
+yaml
+КопироватьРедактировать
+name: Build and Test  
+ 
+on: [push]  
+ 
+jobs:  
+ build:  
+   runs-on: ubuntu-latest  
+   steps:  
+     - name: Checkout repository  
+       uses: actions/checkout@v2  
+     - name: Setup Java  
+       uses: actions/setup-java@v2  
+       with:  
+         distribution: 'temurin'  
+         java-version: '11'  
+     - name: Build project  
+       run: ./gradlew build  
+     - name: Run tests  
+       run: ./gradlew test
